@@ -1187,7 +1187,23 @@ class PokerRendererTests(unittest.TestCase):
         self.renderer.sendPacket(PacketPing)
         self.assertEquals(get_messages(), ['render sendPacket pokernetwork.packets.PacketPing'])
         self.assertEquals(len(proto.sentPackets), 1)
+        self.assertEquals(proto.scheduledPackets, [])
         self.assertEquals(proto.sentPackets[0].type, PACKET_PING)
+    # -----------------------------------------------------------------------------------------------------
+    def test29_schedulePacketCoverage(self):
+        """schedulePacket() full coverage.
+        schedulePacket() should print something and pass packet back onto protocol"""
+        clear_all_messages()
+        proto = PokerRendererTests.MockPokerProtocol()
+        self.renderer.setProtocol(proto)
+        self.assertEquals(get_messages(), [])
+
+        clear_all_messages()
+        self.renderer.schedulePacket(PacketPing)
+        self.assertEquals(get_messages(), ['render schedulePacket pokernetwork.packets.PacketPing'])
+        self.assertEquals(len(proto.scheduledPackets), 1)
+        self.assertEquals(proto.sentPackets, [])
+        self.assertEquals(proto.scheduledPackets[0].type, PACKET_PING)
 
 # -----------------------------------------------------------------------------------------------------
 def GetTestSuite():
